# telegram-bot-pdf-uploader

./: .env  .gitignore  README.md  main.py  pdf_index.json  pyproject.toml  requirements.txt
commands/: misc.py  pdf.py
tools/: index_pdfs.py
